# think-back

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  langgraph.json  main.py  main_test.py  pyproject.toml
.github/workflows/: ci.yml  remind.yml
api/: _runtime.py  _runtime_test.py  index.py  index_test.py
docs/: deployment-vercel.md
scripts/: backup-db.sh  push_prompts.py  set_bot_commands.py  test_multi_tenancy.py  test_multi_tenancy_e2e.py
src/agent/: graph.py  graph_test.py  middleware.py  middleware_test.py  routing.py  state.py  state_test.py  tools.py  tools_test.py
src/agent/nodes/: generate_answer.py  generate_answer_test.py  intent_router.py  intent_router_test.py  retrieve_memories.py  retrieve_memories_test.py  save_memory.py  save_memory_test.py
src/api/: bot.py  bot_batcher.py  bot_batcher_test.py  bot_callbacks.py  bot_callbacks_test.py  bot_commands.py  bot_commands_test.py  bot_graph.py  bot_graph_test.py  bot_helpers.py  bot_helpers_test.py  bot_keyboards.py  bot_keyboards_test.py  bot_test.py
src/core/: config.py  config_test.py  prompt_defaults.py  prompts.py  prompts_test.py
src/db/: checkpointer.py  checkpointer_test.py  client.py  client_test.py  seed.example.json  seed_README.md  seed_memories.py  seed_memories_test.py  user_settings.py  user_settings_test.py  vector_store.py  vector_store_test.py
src/evals/: dataset_examples.py  run_evals.py  seed_dataset.py
src/evals/evaluators/: answer_faithfulness.py  answer_faithfulness_test.py  answer_relevance.py  answer_relevance_test.py  retrieval_hit_rate.py  retrieval_hit_rate_test.py
src/jobs/: remind.py  remind_test.py
supabase/: config.toml  database_types.py  schema.sql  snippets.md
supabase/migrations/: 20260315091856_extensions.sql  20260315092258_memories_tags.sql  20260315093145_test_sessions.sql  20260315093300_user_settings.sql  20260315093318_memories.sql  20260315093418_rls_policies.sql  20260315093520_views.sql  20260318021001_match_memories_function.sql
