[project]
name = "think-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "supabase==2.18.1", # Temporary downgrade supabase until langchain-community has new update > 0.4.1
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.18",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "ty>=0.0.24",
]

[tool.ruff]
exclude = ["supabase/database_types.py", "supabase/schema.sql"]
line-length = 100
target-version = "py312"

[tool.ruff.format]
exclude = ["supabase/database_types.py", "supabase/schema.sql"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
