[project]
name = "think-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg-binary>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[webhooks]>=22.7",
    "supabase>=2.28.3",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.18",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "ty>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
seed-dataset = "src.evals.seed_dataset:main"
run-evals = "src.evals.run_evals:run"

[tool.ruff]
exclude = ["supabase/database_types.py", "supabase/schema.sql"]
line-length = 100
target-version = "py312"

[tool.ruff.format]
exclude = ["supabase/database_types.py", "supabase/schema.sql"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]
